--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -49,7 +49,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+body {
+	-webkit-print-color-adjust: exact;
+}
 
 /* 设置滚动条的样式 */
 ::-webkit-scrollbar {
